#Nmap Changelog ($Id$); -*-text-*-

o [GH#2899] When IP protocol scanning on IPv6 (-sO -6), skip protocol numbers
  that are registered as Extension Header values. When the --data option was
  used, these would fail the assertion "len == (u32) ntohs(ip6->ip6_plen)"
  [Daniel Miller]

o [NSE][GH#3133] Fix the error "nse_nsock.cc:637: void receive_callback(nsock_pool, nsock_event, void*): Assertion `lua_status(L) == 1' failed."
  when reading from an SSL connection. [Daniel Miller]

o [GH#3086] Prevent TCP Connect scan (-sT) from leaking one socket per
  hostgroup, which led to progressively slower scans and assertion failures in
  other scan phases. [Daniel Miller]

o [NSE] Added NSE bindings for more libssh2 functions: channel_request,
  channel_request_pty_ex, channel_shell, and userauth_keyboard_interactive.
  ssh-brute will now use keyboard-interactive auth if password auth is not
  offered. [Daniel Miller, CrowdStrike]

o Fix a bug that was causing Nmap to send empty DNS packets for each target
  that was not found up instead of just skipping them for reverse DNS.

o [macOS][GH#3127] Fix "dnet: Failed to open device en0" errors on macOS since
  Nmap 7.96. [Daniel Miller]

o [NSE] Fix/update/enhance tls.lua for newer TLSv1.3 ciphers, including
  post-quantum ciphersuites.

o [GH#3114][Windows] Use only the DNS servers for up and configured interfaces
  for forward and reverse DNS lookups. When -e or -S are used, use only DNS
  servers that can be connected via that interface or source address. [Daniel Miller]

o [Ndiff][GH#3115] Have configure script check for PyPA 'build' module. [Daniel Miller]

o [Zenmap] Updated Spanish and Chinese language strings for Zenmap to cover latest strings.

o [Zenmap][GH#2718] Zenmap language translation (i18n) files were not being
  installed. [Daniel Miller]

o [Zenmap][GH#3066] Fix Zenmap error "ValueError: I/O operation on closed file"
  when Nmap crashes or fails. [Daniel Miller]
